--- a/slides/18-prob-odds.qmd
+++ b/slides/18-prob-odds.qmd
@@ -129,6 +129,7 @@ Students in grades 9 - 12 surveyed about health risk behaviors including whether
 
 ::: {.column width="60%"}
 ```{r}
+#| echo: false
 data(YouthRisk2009) #from Stat2Data package
 sleep <- YouthRisk2009 |>
   as_tibble() |>
@@ -225,7 +226,7 @@ ggplot(sleep_age, aes(x = Age, y = prop)) +
 ## Different types of models
 
 | Method                          | Outcome      | Model                                                           |
-|-------------------|------------------|-----------------------------------|
+|-------------------|------------------|----------------------------------|
 | Linear regression               | Quantitative | $y_i = \beta_0 + \beta_1~ x_i$                                  |
 | Linear regression (transform Y) | Quantitative | $\log(y_i) = \beta_0 + \beta_1~ x_i$                            |
 | Logistic regression             | Binary       | $\log\big(\frac{\pi_i}{1-\pi_i}\big) = \beta_0 + \beta_1 ~ x_i$ |
