--- a/labs/lab-05-draft.qmd
+++ b/labs/lab-05-draft.qmd
@@ -1,83 +1,145 @@
 ---
 title: "Lab 05: Expanding Multiple Linear Regression"
-author: "Add your name here"
-date: today
 execute:
   freeze: auto
   echo: true
-  evaluate: true
+  eval: false
   warning: false
   message: false
 format: html
+bibliography: references.bib
 ---
 
 ::: callout-important
-## Date due
+# Due date
 
--   Add dates
--   Add dates
+This lab is due on **Thursday, November 7 at 11:59pm.** To be considered on time, the following must be done by the due date:
+
+-   Final `.qmd` and `.pdf` files pushed to your team's GitHub repo
+
+-   Final `.pdf` file submitted on Gradescope
 :::
 
-# Expanding Multiple Linear Regression
+# Introduction
 
-In this lab, we will explore how to address and interpret the presence of qualitative variables among the predictors and estimating the effect of interaction between dependent variables.
+In this lab, you will apply what you've learned about linear regression to analyze data about expenditures and revenues for collegiate athletic programs. The analysis will focus on working with and interpreting categorical predictors and interaction terms. You will also explore model diagnostics.
 
-## Packages
+# Learning goals
 
-For today's lab, we will be using the following packages.
+By the end of the lab you will be able to…
 
-```{r packages}
+-   use multiple linear regression to analyze complex real-world data.
+
+-   use variance-stabilizing transformations.
+
+-   identify and address multicollinearity
+
+# Getting started
+
+-   A repository has already been created for you and your teammates. Everyone in your team has access to the same repo.
+
+-   Go to the [sta221-fa24](https://github.com/sta221-fa24) organization on GitHub. Click on the repo with the prefix **lab-05**. It contains the starter documents you need to complete the lab.
+
+-   Each person on the team should clone the repository and open a new project in RStudio. Throughout the lab, each person should get a chance to make commits and push to the repo.
+
+# Workflow: Using Git and GitHub as a team
+
+::: callout-important
+There are no Team Member markers in this lab; however, you should use a similar workflow as in [Lab 02](../lab-02.html). Only one person should type in the group’s .qmd file at a time to avoid merge conflicts. Once that person has finished typing the group’s responses, they should *render, commit, and push* the changes to GitHub. All other teammates can *pull* to see the updates in RStudio.
+
+Every teammate must have at least one commit in the lab. Everyone is expected to contribute to discussion even when they are not typing.
+:::
+
+# Packages
+
+You will use the following packages in today’s lab. Add other packages as needed.
+
+```{r}
+#| label: load-packages
+#| warning: false
+#| message: false
+
 library(tidyverse)
+library(tidymodels)
+library(knitr)
 ```
 
 ## Data
 
-The data for today's lab is an extract from the [Equity in Athletics Data Analysis](https://ope.ed.gov/athletics/#/datafile/list), reporting data about student body composition, per-sport expenditure and revenues for US NCAA Division I colleges.
-
-<!--# This is data cleaned from a tidytuesday data set-->
-
-```{r read_data}
-sports <- read_csv("data/ncaa-revenues.csv")
-```
+Today's data contains expenidtures, revenues, and student body composition, other information about NCAA Division 1 athletic programs at colleges and universities in the United States. The data were featured as part of the [TidyTuesday](https://github.com/rfordatascience/tidytuesday/blob/master/data/2022/2022-03-29/readme.md) data visualization challenge. It was originally obtained from [Equity in Athletics Data Analysis](https://ope.ed.gov/athletics/#/datafile/list), a reporting tool by the Office of Postsecondary Education of the U.S. Department of Education.
 
 We will investigate whether school features affect the revenues of athletics programs in different sports. Here is a table describing the variables in the data.
 
-Link to data dictionary on tidytuesday: <https://github.com/rfordatascience/tidytuesday/blob/master/data/2022/2022-03-29/readme.md>
+This anlaysis will focus on the following variables:
 
-**The goal of the analysis is to use various features to explain variability in total revenue from athletics for NCAA colleges and universities.**
+-   `institution_name`: School name
+
+-   `sector_name`: School type
+
+-   `ef_total_count`: Total student enrollment for binary male/female gender
+
+-   `sum_partic_men`: Total participation in athletics for men
+
+-   `sum_partic_women`: Total participation in athletics for women
+
+-   `sports`: Sports name
+
+-   `total_exp_menwomen`: Total expenditure for both (in US dollars)
+
+-   `total_rev_menwomen`: Total revenue for all sports (in US dollars)
+
+[Click here](https://github.com/rfordatascience/tidytuesday/blob/master/data/2022/2022-03-29/readme.md) for the full data dictionary.
+
+```{r}
+#| label: load-data
+#| echo: true
+#| message: false
+#| warning: false
+sports <- read_csv("data/ncaa-revenues.csv")
+```
 
 ## Exercises
 
+**Goal**: The goal of the analysis is to use various features of NCAA Division 1 colleges and universities to explain variability in the total revenue from their athletic programs.
+
 ### Exercise 1
 
-We begin by rescaling the response variable `total_rev_menwomen` and primary predictor variable `total_exp_menwomen`, so that they are in \$100k.
+We'll begin by rescaling the response and some of the predictor variables.
 
-Why might we rescale these variables instead of using them in the original units?
+-   Rescale the response variable `total_rev_menwomen` and the primary predictor variable `total_exp_menwomen`, so that they are in terms of \$100K (100 thousand dollars). Call the new variables `rev100k` and `exp100k`, respectively.
 
-Create new variables `rev100k` and `exp_100k` that are the rescaled versions of revenue and expenditures, respectively.
+-   Rescale the predictor variable `ef_total_count` , so it is in terms of thousands of students. Call the new variable `studnets_1k`.
+
+-   Briefly explain why we might we rescale these variables instead of using them in the original units
 
 ### Exercise 2
 
-From this plot, we can notice a few features that can be used as guides to transform the data and make it more amenable to a regression analysis.
+Before modeling, let's do some exploratory data analysis.
 
 -   Make a visualization of the relationship between revenue and expenditures. Use the plot to describe the relationship between the two variables.
 
 ```{=html}
 <!-- -->
 ```
--   Higher values of both expenditures and revenues are associated with greater variability. Transform both variables and place them on a logarithmic scale.
--   Larger values seem to follow a slightly different trend and are associated with two sports: football and basketball. Create an indicator variable encoding whether the observation refers to either of those two sports or not.
+-   Higher values of both expenditures and revenues are associated with greater variability. Transformation both variables using a `log` transformation, to deal with the potential violation of an assumption of linear regression. Name the variables `log_exp` and `log_rev`, respectively.
+-   Larger values of expenditures and revenues seem to follow a slightly different trend and are associated with two sports: football and basketball. Create an indicator variable that takes value `1` if the sport is basketball or football and `0` otherwise. Name the variable `bball_football`.
 
 ### Exercise 3
 
-With these transformations, we can notice one further thing: a lot of observations display a perfect one-to-one relationship between expenses and revenues. Provide a possible interpretation of this phenomenon. Would you think it is reasonable to include observations displaying this exact relationship?
+-   Visualize the relationship between `log_rev` and `log_exp`.
 
-Create a new dataset filtering out the observations for which expenditures and revenues are exactly equal. Call the new data set `sports_nolinear`.
+-   From the visualization, you may notice a lot of observations form a straight diagonal line, indicating a perfect one-to-one relationship between expenses and revenues. Provide a possible interpretation of this phenomenon.
+
+-   Would you think it is reasonable to include observations displaying this exact relationship? Briefly explain.
+
+-   Create a new dataset filtering out the observations for which expenditures and revenues are exactly equal. Call the new data set `sports_nolinear`.
+
+**You will use the data set `sports_nolinear` for the remainder of the assignment.**
 
 ```{r}
 #| include: false
 sports <- sports |> 
-  mutate(basket_football = 
+  mutate(bball_football = 
            as.factor(if_else(sports=="Basketball"|sports=="Football", 1, 0)),
         exp_100k = total_exp_menwomen / 100000,
         rev_100k = total_rev_menwomen / 100000,
@@ -90,54 +152,130 @@ sports_nolinear <- sports |>
 
 ### Exercise 4
 
-Using this newly created dataset, regress log-revenue on log-expenditures, student body size, school type, sport type, sport participation for men and women and the basketball/football indicator you created. Furthermore, include an interaction term between log-expenses and the indicator for basketball or football.
+Using the data set `sports_nolinear`, fit a regression model with the log-transformed revenue as the response variable, and the log-transformed expenditures, student enrollment, school type, sports type, participation in athletics for men, participation in atheletics for women, and the basketball/football indicator you created in a previous exercise as predictors. Additionally, include the interaction between the log-transformed expenses and the basketball/football indicator.
+
+Neatly display the model using 3 digits.
 
 ### Exercise 5
 
-Inspect the regression coefficients. What type of school and sport corresponds to the baseline intercept?
+Consider the regression model from the previous exercise.
 
-You'll notice that one coefficient is a missing value. What happened? What is the technical name of this phenomenon?
+-   What type of school and sport corresponds to the intercept?
+
+-   You'll notice that one coefficient is a missing value. Why is the coefficient missing? What is the technical name of this phenomenon?
 
 ### Exercise 6
 
-For the sake of interpretability, it is useful to have a regression model in which no coefficients are missing, and the coefficients on each sport indicator represent the baseline for such sport. Run another regression model on the same covariates as before, making sure to drop the necessary variables (and the intercept) to achieve this.
+For the sake of interpretability, it is useful to have a regression model in which no coefficients are missing, and the coefficients on each sport indicator represent the baseline level for such sport. To address this issue, use the code below to fit another regression model that uses the same predictors as before, making sure to drop the necessary variables and the intercept (by the the `-1` in the formula) to achieve this.
 
 ```{r}
 #| echo: true
-reg2 <- lm(log_rev ~ -1 + sports + students_1k + sector_name + sum_partic_men + 
-            sum_partic_women + log_exp + 
-            log_exp*basket_football - basket_football,
+sports_fit_2 <- lm(log_rev ~ -1 + sports + students_1k + sector_name +
+             sum_partic_men + sum_partic_women + log_exp + 
+             log_exp*bball_football - bball_football,
           data = sports_nolinear)
 ```
 
-You will notice that we have another indicator variable in our model, corresponding to school type. Which type of school was chosen to be the baseline in this model?
+-   Why is there only one coefficient for school type, even after the intercept was removed
+
+-   Which type of school was chosen to be the baseline in this model?
 
 ### Exercise 7
 
-Now that we have an interpretable model, let us assess the fit and perform some diagnostics to verify whether our linear regression assumptions are reasonable for this data. As a first step, provide some overall measures of model fit and comment on whether it seems to have an acceptable predictive power on the response of interest.
+Now that we have an interpretable model, let us assess the fit and perform some diagnostics to verify whether our linear regression assumptions are reasonable for this data.
+
+As a first step, provide some overall measures of model fit and comment on whether it seems to have an acceptable predictive power on the response of interest.
 
 ### Exercise 8
 
-Let us inspect the residuals for the model. A concern we may have is that, since each university has athletic programs in multiple sports, the deviations from the mean may be correlated across institutions. To verify if this is the case, draw a fitted-residual scatterplots and color code each point by institution code. Comment on the output and discuss whether errors seem to be correlated within institutions.
+Next, let's take a look at the residuals for the model.
+
+Because there are multiple sports at every institution, we may be concerned the residuals within an institution are correlated with each other (thus violating the independence assumption).
+
+Due to the large number of institutions, we will look at randomly selected subset of 20 institutions to assess this.
+
+-   Take a random sample of 20 institutions. Use `set.seed(221)` to make your results reproducible.
+
+-   Plot the residuals versus fitted values, faceted by institution.
+
+-   Based on the faceted plot, do the errors appear to be correlated within institutions? Briefly explain your response.
+
+::: callout-tip
+[Click here](https://r-graph-gallery.com/223-faceting-with-ggplot2.html) for more detail, code, and examples of faceting in ggplot2.
+
+You may need to change the size of the figure so that the faceted lot is fully visible. You can do so using the options `#| fig-width` and `#| fig-height` in the code chunk.
+:::
 
 ### Exercise 9
 
-In the previous plot, we can notice two things. Firstly, there seems to be two groups of observations: larger fitted values correspond to lower variance in the residuals compared to the rest. Secondly, in the low fitted values group some observations have large negative residuals, which may indicative of outliers.
+After an examination of all the residuals, we notice a few things:
 
-To check whether this seems to indicate some model misspecification, we compute a variation of the above plot. Compute the studentized residuals and Cook's distance for the model, and plot fitted values against residuals. Now, color code the points based on the computed Cook's distance and have different point shapes for whter the observation corresponds to basketball or football. Comment on the plot and address the two concerns detailed above.
+1.  There seems to be two groups of observations.
+2.  Institutions with larger fitted values correspond to lower variance in the residuals compared to the others.
+3.  There are institutions with lower fitted values that have large negative residuals, potentially indicating outliers.
+
+We are concerned that these observations may indicate some model misspecification (i.e., the model does not accurately reflect the trends in the data). Threfore, we take a look at the residuals a different way. We plot the standardized residual versus the fitted values, color the points based Cook's distance, and use shape to indicate whether the sport is basketball or football.
 
 ```{r}
 #| echo: false
 
 library(tidymodels)
-sports_aug <- augment(reg2)
+sports_aug <- augment(sports_fit_2)
 ggplot(sports_aug) +
   geom_point(mapping = aes(x = .fitted,
                            y = .std.resid,
                            color = .cooksd,
-                           shape = as.factor(basket_football)))
+                           shape = as.factor(bball_football)))
 ```
+
+-   Describe what you observe from the plot and how your observations compare to the list of things noticed from previous plots.
+
+-   Do you think this model is an appropriate fit for the data or is the model misspecified? Briefly explain.
 
 ### Exercise 10
 
-Comment on whether our linear regression model seems to be appropriate for the data and provide a brief commentary of the result by interpreting the regression coefficients and their significance.
+-   Based on this model (regardless of your answer to the previous exercise), which variables seem to be useful in explaining the variability in the revenue from collegiate sports?
+
+-   Interpret the coefficient for one useful quantitative predictor in terms of the revenue (not log(revenue)).
+
+-   Interpret the coefficient for one useful categorical predictor in terms of the revenue (not log(revenue)).
+
+# Submission
+
+You will submit the PDF documents for labs, homework, and exams in to Gradescope as part of your final submission.
+
+::: callout-warning
+Before you wrap up the assignment, make sure all documents are updated on your GitHub repo. We will be checking these to make sure you have been practicing how to commit and push changes.
+
+Remember – you must turn in a PDF file to the Gradescope page before the submission deadline for full credit.
+:::
+
+To submit your assignment:
+
+-   Access Gradescope through the menu on the [STA 221 Canvas site.](https://canvas.duke.edu/courses/38867)
+
+-   Click on the assignment, and you’ll be prompted to submit it.
+
+-   Select all team members’ names, so they receive credit on the assignment. [Click here](https://help.gradescope.com/article/m5qz2xsnjy-student-add-group-members) for video on adding team members to assignment on Gradescope.
+
+-   Mark the pages associated with each exercise. All of the pages of your lab should be associated with at least one question (i.e., should be “checked”).
+
+-   Select the first page of your .PDF submission to be associated with the *“Workflow & formatting”* section.
+
+# Grading
+
+| Component             | Points |
+|:----------------------|:-------|
+| Ex 1                  |        |
+| Ex 2                  |        |
+| Ex 3                  |        |
+| Ex 4                  |        |
+| Ex 5                  |        |
+| Ex 6                  |        |
+| Ex 7                  |        |
+| Ex 8                  |        |
+| Ex 9                  |        |
+| Ex 10                 |        |
+| Workflow & formatting | 4      |
+
+The “Workflow & formatting” grade is to assess the reproducible workflow and collaboration. This includes having at least one meaningful commit from each team member, a neatly organized document with readable code, and updating the team name and date in the YAML.
